k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gok
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"  # Enable regex for Next.js paths
spec:
  ingressClassName: nginx
  rules:
  - host: gok.local
    http:
      paths:
      - path: /(.*)  # Capture all paths, including _next/static
        pathType: ImplementationSpecific
        backend:
          service:
            name: gok
            port:
              number: 80
